--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "file-loader": "^6.2.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.1"
+    "webpack-dev-server": "^4.9.1",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "keywords": []
 }
